--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.0
   http: ^1.3.0
+  go_router: ^15.1.1
 
 dev_dependencies:
   flutter_test:
